# yonder

clients/web/: .gitignore  Cargo.toml  Dockerfile  compose.yaml
clients/web/src/: api.rs  main.rs  user.rs
clients/web/src/auth/: google.rs  mod.rs
services/room/: Cargo.toml  Dockerfile  compose.yaml
services/room/src/: main.rs
services/user/: Cargo.toml  Dockerfile  compose.yaml
services/user/migrations/: 20240211035612_init.down.sql  20240211035612_init.up.sql
services/user/src/: api.rs  auth.rs  main.rs
services/user/src/db/: mod.rs  requests.rs  responses.rs
