[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
envconfig = "0.10.0"
jsonwebkey = "0.3.5"
jsonwebtoken = "9.2.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_oauth2 = "0.5.0"
serde = "1.0.193"
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
